# s3zero-hal

./: .gitignore  Cargo.toml
.cargo/: config.toml
examples/: psram.rs  sgp41.rs  xiao.rs
src/: .lib.rs.swp  .ws2812_rmt_single.rs.swp  ds18b20.rs  lib.rs  rgb.rs  sgp41.rs  ws2812_rmt_single.rs
util/: ptable.sh
