[package]
edition      = "2021"
name         = "s3zero-hal"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "s3zero-hal"
path = "./src/bin/main.rs"
harness = false

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32s3",
  "log-04",
  "unstable",
  "psram",
] }
log = "0.4.27"

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "dns",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
anyhow = { version = "1.0.99", default-features = false }
esp-storage = { version = "0.7.0", features = ["esp32s3"] }
embedded-storage = "0.3.1"
sequential-storage = "4.0.2"
embassy-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"
onewire = "0.4.0"
esp-hal-rmt-onewire = "0.4.0"
heapless = "0.9.1"
embassy-sync = "0.7.1"
bme280-rs = "0.3.0"
bme280 = { version = "0.5.1", features = ["async"] }
sensirion-i2c = { version = "0.4.0", features = ["embedded-hal-async"] }
embedded-hal-async = "1.0.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
